fix(List): fix overflow wrap (#2407)

--- a/packages/components/src/components/InlineCode/InlineCode.module.scss
+++ b/packages/components/src/components/InlineCode/InlineCode.module.scss
@@ -1,7 +1,7 @@
 .inlineCode {
   font-family: FiraCode, monospace;
   font-size: var(--inline-code--font-size);
-  overflow-wrap: break-word;
+  overflow-wrap: anywhere;
   padding-inline: var(--inline-code--padding-x);
   padding-block: var(--inline-code--padding-y);
   border-radius: var(--inline-code--corner-radius);
